# grape-mcp-devtools

./: .env  .env.example  ARCHITECTURE_IMPROVEMENT_ANALYSIS.md  Cargo.toml  Cargo_test.toml  DEVELOPMENT_PROGRESS.md  Dockerfile  ENV_CONFIG_GUIDE.md  FINAL_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_FEATURES_COMPLETION_REPORT.md  MCP_CLIENT_README.md  PHASE_3_COMPLETION_SUMMARY.md  PROJECT_CODE_REVIEW_FINAL_REPORT.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS_FINAL.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  TODO.md  TypeScript_Support_Summary.md  VECTOR_DATABASE_REFACTOR_SUMMARY.md  grape-mcp-devtools.code-workspace  mcp.bat  mcp_client.py  requirements.txt  setup_mcp_client.py  simple_mcp_client.py  start_mcp_server.ps1  temp_go_doc.txt  项目功能实现状态清单.md
.github/: copilot-instructions.md
ai_service/: config.yaml  requirements.txt
config/: default.toml  embedding.toml  system_config.toml
configs/: tool_detection.yaml
docs/: PHASE_1_COMPLETION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  README.md  VECTOR_DATABASE_ENHANCEMENT_PLAN.md  cleanup_completion_summary.md  dynamic_mcp_tools.md  embedded_qdrant_guide.md  embedding_guide.md  final_completion_summary.md  optimization_completion_report.md  plan.md  tool_descriptions_optimization.md  upgrade_summary.md  工具描述规范.md  项目完整描述.md
docs/analysis/: design-implementation-gap-analysis.md  project-context-integration-design.md
docs/architecture/: README.md  interfaces.md  overview.md
docs/development/: README.md  documentation-requirements.md  tool-description-guide.md
docs/modules/: README.md  cli_integration.md  document_processing.md  dynamic_registry.md  environment_detection.md  language_features.md  mcp_client.md  mcp_protocol.md  storage_layer.md  three_improvements_completed.md  tool_installer.md  vector_database_upgrade.md  vector_search_fix_completed.md  windows_admin.md
docs/user-guide/: README.md  mcp-protocol.md  quick-start.md
examples/: basic_usage.rs  dynamic_registry_demo.rs  embedded_qdrant_usage.rs  embedding_usage.rs  multi_agent_demo.rs  test_grape_vector_db.rs
plan/: README.md  总体开发计划-优化版.md  总体开发计划.md  现有技术资产评估报告.md
plan/cli_integration/: 开发计划.md
plan/document_processing/: 开发计划.md
plan/dynamic_registry/: 开发计划.md
plan/language_features/: 开发计划.md
plan/mcp_client/: 开发计划.md
plan/mcp_protocol/: 开发计划.md
plan/storage_layer/: 开发计划.md
plan/tool_installer/: 开发计划.md
plan/windows_admin/: 开发计划.md
scripts/: run_dynamic_demo.sh
src/: config.rs  embeddings.rs  errors.rs  index.rs  lib.rs  lib.rs.backup  main.rs  metrics.rs  query.rs  server.rs  types.rs
src/ai/: advanced_intelligent_crawler.rs  ai_service.rs  document_ai.rs  enhanced_ml_content_analyzer.rs.disabled  intelligent_parser.rs  intelligent_web_analyzer.rs  intelligent_web_analyzer.rs.backup  ml_content_analyzer.rs.disabled  mod.rs  predicate_ai.rs  prompt_templates.rs  smart_url_crawler.rs  task_oriented_crawler.rs  url_ai.rs
src/ai/tests/: mod.rs
src/cli/: detector.rs  mod.rs  registry.rs  tool_installer.rs
src/language_features/: ai_collector.rs  collectors.rs  content_analyzer.rs  data_models.rs  doc_crawler.rs  enhanced_collectors.rs  enhanced_content_pipeline.rs  intelligent_scraper.rs  mod.rs  services.rs  smart_url_analyzer.rs  storage.rs  tools.rs  url_discovery.rs
src/mcp/: mod.rs  protocol.rs  server.rs
src/models/: mod.rs
src/storage/: mod.rs  qdrant.rs  traits.rs
src/tools/: analysis.rs  api_docs.rs  background_cacher.rs  base.rs  changelog.rs  dependencies.rs  doc_processor.rs  documentation_suggestions.rs  dynamic_registry.rs  enhanced_doc_processor.rs  enhanced_language_tool.rs  environment.rs  environment_detector.rs  file_go_docs_tool.rs  flutter_docs_tool.rs  java_docs_tool.rs  javascript_docs_tool.rs  mod.rs  python_docs_tool.rs  rust_docs_tool.rs  search.rs  security.rs  test_simple_improvements.rs  typescript_docs_tool.rs  unified_vector_store.rs.disabled  vector_docs_tool.rs  versioning.rs
src/tools/docs/: doc_traits.rs  file_store.rs  mod.rs  openai_vectorizer.rs  reranker.rs  store_factory.rs
src/tools/tests/: ai_crawler_fallback_test.rs  analysis_test.rs  complete_go_workflow_test.rs  description_optimization_test.rs  doc_processor_test.rs  end_to_end_go_test.rs  enhanced_language_support_test.rs  go_docs_test.rs  go_integration_test.rs  java_docs_test.rs  java_test.rs  javascript_test.rs  mod.rs  multi_language_test.rs  python_test.rs  real_go_test.rs  rust_docs_test.rs  rust_test.rs  standalone_go_test.rs  test_improvements.rs  typescript_test.rs  vector_docs_test.rs
src/vectorization/: embeddings.rs  file_chunker.rs  mod.rs  performance_optimizer.rs
src/versioning/: base.rs  mod.rs  traits.rs
tests/: cli_detection_tests.rs  description_optimization_integration_test.rs  mcp_client_integration_test.rs  mcp_integration_test.rs  test_batch_embedding.rs  tool_description_test.rs  tool_installer_test.rs  windows_admin_test.rs
(+15 files in other folders)
