[package]
name = "grape-mcp-devtools"
version = "0.1.0"
edition = "2021"
description = "MCP 多语言文档服务"
authors = ["Grape Team"]
license = "MIT"

[features]
default = []
go-integration-tests = []

[dependencies]
# MCP Server 依赖 (rust-sdk)
rmcp = { version = "0.1.5", features = ["server"] }
# 异步运行时
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "io-std", "process", "signal"] }
# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
# OpenAI API 客户端
async-openai = { version = "0.28.0", features = ["byot"] }
# 序列化/反序列化
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.32"
# 版本比较
semver = "1.0.20"
version-compare = "0.2.0"
# URL 编码
urlencoding = "2.1.3"
# 日志和错误处理
tracing = "0.1.40"
anyhow = "1.0.79"
thiserror = "1.0.57"
async-trait = "0.1.77"
# 命令行参数处理
clap = { version = "4.4", features = ["derive", "env"] }
# 向量数据库 (支持内嵌模式)
qdrant-client = { version = "1.14.0", features = ["serde"] }
# 缓存
moka = { version = "0.12", features = ["future"] }
# 日志
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# 向量操作
ndarray = "0.15.6"
# 高性能内存分配器
mimalloc = { version = "0.1.39", default-features = false }
# HTML 解析
scraper = "0.18.1"
# 正则表达式
regex = "1.10.2"
# 静态初始化
lazy_static = "1.4.0"
# 时间处理
chrono = { version = "0.4.31", features = ["serde"] }
# 临时文件
tempfile = "3.8.1"
# 文件系统操作
walkdir = "2.5.0"
# TOML 解析
toml = "0.8.8"
# 并发锁
parking_lot = "0.12"
# 异步工具
futures = "0.3"
# Web 框架
salvo = { version = "0.68", features = ["cors", "serve-static"] }
quick-xml = "0.37.5"
pulldown-cmark = "0.13.0"
# XML 解析 (用于 Maven pom.xml)
roxmltree = "0.19.0"
# 安全漏洞数据库
rustsec = "0.29.1"
# 更好的错误处理
color-eyre = "0.6.2"
# 字符串相似度比较
strsim = "0.11.0"
# 代码分析工具
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-python = "0.20.4"
tree-sitter-javascript = "0.20.1"
tree-sitter-typescript = "0.20.2"
# 更好的 HTTP 客户端功能
reqwest-middleware = "0.2.4"
reqwest-retry = "0.4.0"
# Base64 编码
base64 = "0.21.7"

[dev-dependencies]
tokio-test = "0.4.2"
async-trait = "0.1.77"
scraper = "0.18.1"
serde_yaml = "0.9.32"
walkdir = "2.5.0"


