[package]
name = "grape-mcp-devtools"
version = "2.0.0"
edition = "2021"
description = "Advanced MCP development tools with language feature analysis"
authors = ["Grape Team"]
license = "MIT"

[features]
default = []
go-integration-tests = []
database = ["rusqlite"]
async-database = ["sqlx"]

[dependencies]
# MCP Server 依赖 (rust-sdk)
rmcp = { version = "0.1.5", features = ["server"] }
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
# AI集成
async-openai = "0.20"
# 环境变量读取
dotenv = "0.15"
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.32"
# 二进制序列化（用于向量数据持久化）
bincode = "1.3.3"
# 版本比较
semver = "1.0.20"
version-compare = "0.2.0"
# URL 编码
urlencoding = "2.1.3"
# 日志和错误处理
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0.57"
async-trait = "0.1"
# 命令行参数处理
clap = { version = "4.0", features = ["derive"] }
# 嵌入式向量数据库 (instant-distance)
instant-distance = "0.6.0"
# UUID 生成
uuid = { version = "1.0", features = ["v4", "serde"] }
# 缓存
moka = { version = "0.12", features = ["future"] }
# 日志
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 向量操作
ndarray = "0.15.6"
# 高性能内存分配器
mimalloc = { version = "0.1.39", default-features = false }
# 网页解析
scraper = "0.18"
html5ever = "0.26"
url = "2.4"
select = "0.6"
# 正则表达式
regex = "1.10"
# 静态初始化
lazy_static = "1.4.0"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# 临时文件
tempfile = "3.8.1"
# 文件系统操作
walkdir = "2.5.0"
# TOML 解析
toml = "0.8.8"
# 并发锁
parking_lot = "0.12"
# 异步工具
futures = "0.3"
quick-xml = "0.37.5"
pulldown-cmark = "0.13.0"
# XML 解析 (用于 Maven pom.xml)
roxmltree = "0.19.0"
# 安全漏洞数据库
rustsec = "0.29.1"
# 更好的错误处理
color-eyre = "0.6.2"
# 字符串相似度比较
strsim = "0.11.0"
# 代码分析工具
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-python = "0.20.4"
tree-sitter-javascript = "0.20.1"
tree-sitter-typescript = "0.20.2"
# 更好的 HTTP 客户端功能
reqwest-middleware = "0.2.4"
reqwest-retry = "0.4.0"
# Base64 编码
base64 = "0.21"
# JavaScript执行引擎 (轻量级替代浏览器渲染)
boa_engine = "0.19"
# JSON路径查询
jsonpath = "0.1.1"
# 数据库支持（可选）
rusqlite = { version = "0.30", optional = true }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"], optional = true }
# 额外工具
sha2 = "0.10"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4.2"
async-trait = "0.1"
scraper = "0.18.1"
serde_yaml = "0.9.32"
walkdir = "2.5.0"

[[bin]]
name = "grape-mcp-devtools"
path = "src/main.rs"

[[bin]]
name = "test_cli"
path = "src/bin/test_cli.rs"

[[bin]]
name = "detailed_test_cli"
path = "src/bin/detailed_test_cli.rs"

[[bin]]
name = "grape-mcp-server"
path = "src/main.rs"


